--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,89 @@
-* {
+body > * {
+    margin: 0;
     padding: 0;
+}
+
+
+body {
+    background-color: rgb(0, 28, 48);
+    font-family: "Montserrat", sans-serif;
+    color: rgb(218, 255, 251);
+    font-size: 1.1rem;
+    font-weight: 200;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    border: 2px solid black;
     margin: 0;
 }
 
-body {
-    background-color: rgb(238, 237, 235);
-    color: rgb(47, 54, 69);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-}
-
-/* #body-1 {
-    font-size: 1.5rem;
+body > div {
     flex: 1;
 }
 
+#body-1 {
+    flex: 1;
+}
 #body-2 {
-    flex: 3;
-} */
+    flex: 2;
+}
+#body-3 {
+    flex: 7;
+}
+#body-4 {
+    flex: 2;
+}
 
-nav {
-    background-color: rgb(230, 185, 166);
-    width: 30%;
+header {
+    text-align: center;
+}
+
+h1 {
+    margin: 1rem;
+    font-weight: 400;
+    font-size: 4rem;
+}
+
+header > h2 {
+    font-weight: 500;
+    font-size: 1rem;
+}
+
+.nav-list {
+    background-color: rgb(23, 107, 135);
     display: flex;
     flex-direction: column;
-    height: 100%;
-    align-content:center;
-    gap: 5rem;
+    list-style: none;
+    position: fixed;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    gap: 1rem;
 }
 
-/* #nav-main {
-    height: 10%;
+.nav-list li {
+    margin: 0;
+    padding: 0;
+    font-size: 1.5rem;
+    flex-shrink: 1;
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-
-#nav-projects {
-    height: 10%;
-}
-
-#nav-contact {
-    height: 10%;
-}
-
-#nav-badge {
-    height: 10%;
-} */
 
 .orange {
-    color: rgb(255, 101, 0);
+    color: rgb(100, 204, 197);
+}
+
+a {
+    text-decoration: none;
+}
+
+.nav-list > li:hover {
+    background-color: rgb(0, 28, 48);
+}
+
+a > .orange {
+
 }
