--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ body > * {
     padding: 0;
 }
 
-
 body {
     background-color: rgb(0, 28, 48);
     font-family: "Montserrat", sans-serif;
@@ -17,21 +16,14 @@ body {
     margin: 0;
 }
 
-body > div {
-    flex: 1;
+nav {
+    position: sticky;
+    top: 0;
 }
 
-#body-1 {
-    flex: 1;
-}
-#body-2 {
-    flex: 2;
-}
 #body-3 {
-    flex: 7;
-}
-#body-4 {
-    flex: 2;
+    width: 70%;
+    margin: auto;
 }
 
 header {
@@ -54,7 +46,6 @@ header > h2 {
     display: flex;
     flex-direction: column;
     list-style: none;
-    position: fixed;
     height: 100vh;
     margin: 0;
     padding: 0;
